@@ -1,3 +1,7 @@
+2006-06-01  arjan <arjan at yirdis dot nl>
+
+        * some cleanup, added TODO: comments for conversion to Gaphas.
+
 2006-05-29  arjan <arjan at yirdis dot nl>
 
 	* setup.py: added languages Swedish and Catalan.
